Fix unneeded whitespace preservation on user activity cards

--- a/static/css/view-project/src/activity-user.scss
+++ b/static/css/view-project/src/activity-user.scss
@@ -79,7 +79,10 @@
 
       .with-icon {
         margin-top: .5em;
-        white-space: pre-line;
+
+        &.comment {
+          white-space: pre-line;
+        }
       }
     }
 
